# coin

./: .gitignore  Cargo.toml  rust-toolchain.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  pagination.rs
crates/application/src/commands/: add_group_member.rs  create_empty_group.rs  create_expense.rs  create_user.rs  mod.rs
crates/application/src/queries/: get_expenses_for_group.rs  get_groups_for_user.rs  get_user_by_email.rs  get_user_by_id.rs  mod.rs
crates/application/tests/: add_group_member.rs  create_empty_group.rs  create_expense.rs  create_user.rs
crates/application/tests/infra/: ctx.rs  dates.rs  db.rs  expense_entries.rs  groups.rs  mod.rs  users.rs
crates/auth-models/: Cargo.toml
crates/auth-models/src/: lib.rs
crates/database/: Cargo.toml
crates/database/migrations/: 00001_create_user_table.sql  00002_create_auth_tables.sql  00003_create_group_tables.sql  00004_create_expense_entry_tables.sql
crates/database/src/: error.rs  lib.rs  pagination.rs  setup.rs
crates/database/src/models/auth/: mod.rs
crates/database/src/models/expense_entry/: mod.rs
crates/database/src/models/group/: mod.rs
crates/database/src/models/user/: db_role.rs  mod.rs
crates/database/src/queries/: auth.rs  expense_entry.rs  group.rs  mod.rs  user.rs
crates/database/tests/: expense_entry_queries_test.rs  group_queries_test.rs  user_queries_test.rs
crates/database/tests/fixtures/: expense_entries.rs  expense_entries.sql  groups.rs  groups.sql  mod.rs  users.rs  users.sql
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: expense_entry.rs  group.rs  mod.rs  user.rs
crates/domain/src/testutils/: expense_entry.rs  group.rs  mod.rs  user.rs
crates/domain/src/types/: expense_entry_id.rs  expense_entry_status.rs  expense_id.rs  group_id.rs  groupname.rs  mod.rs  money.rs  role.rs  user_id.rs  username.rs
crates/domain/src/types/utils/: id_type_macro.rs  mod.rs
crates/rest-api/: Cargo.toml  config-dev.yml
crates/rest-api/src/: config.rs  error.rs  main.rs  state.rs
crates/rest-api/src/auth/: argon2.rs  authenticate.rs  cookie.rs  login.rs  logout.rs  mod.rs  password.rs  register.rs
crates/rest-api/src/extractors/: user.rs
crates/rest-api/src/handlers/: auth.rs  dummy.rs  group.rs  mod.rs
crates/rest-api/src/handlers/group/: expense.rs  mod.rs
crates/rest-api/src/middlewares/: mod.rs  request_id.rs  sleep_unauthorized.rs  trace.rs
