[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
derive-new = { workspace = true }
email_address = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
testutils = []
