[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
axum = "0.8.7"
axum-extra = { version = "0.12.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = { workspace = true }
email_address = { workspace = true }
rand_core = { version = "0.6", features = ["std"] }
serde = { workspace = true }
serde_yaml_ng = "0.10"
time = "0.3.44"
tokio = { workspace = true }
thiserror = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["request-id", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
uuid = { workspace = true }

# workspace crates
application = { workspace = true }
auth-models = { workspace = true }
database = { workspace = true }
domain = { workspace = true }
rand = "0.9.2"
